# slinky

./: Cargo.toml  README.md  Slinky-monocolour.aseprite  Slinky-two-colour.aseprite  Slinky.aseprite  Wave-good-old-colour.aseprite  Wave-good.aseprite  Wave-simple.aseprite  index.html  watcher.txt
src/: main.rs  music.rs
