[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
wasm4 = "0.1.0"

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]

